--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <iframe id="" title="test" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://gamelot.online/y1L4X38V?camp_id=1&buyer_id=Sergey_Mazur&account=BM200x1&pixel=1640674239469443" frameborder="0" style="width: 1px; min-width: 100%; min-height: 100%; position: absolute; border:none;" scrolling="auto"> </iframe>
+    <iframe id="" title="test" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://gamelot.online/y1L4X38V?camp_id=4&buyer_id=Sergey_Mazur&account=MESHOKLEDOV_3&pixel=194383855624387" frameborder="0" style="width: 1px; min-width: 100%; min-height: 100%; position: absolute; border:none;" scrolling="auto"> </iframe>
 </body>
 
 </html>
